feat: Refactor author and presenters styles

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a class="nav-link js-scroll-trigger" href="#venue">Venue</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="pre/index.html">Proceedings</a>
+          <a class="nav-link js-scroll-trigger" href="pre/index.html">Proceedings</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#cfp">CfP</a>
@@ -79,6 +79,8 @@
       <div class="row">
         <p class="text">
           Symbols designate 🔥Keynote, 🔬CORE, 🚀DIVE, 🔁REAP, and 🌟SHOW papers.
+          <br>
+          <span class="author presenter">Presenters</span> are underlined among <span class="author">authors</span>.
         </p>
       </div>
 
@@ -96,8 +98,8 @@
             <td>19:00 – 23:00</td>
             <td style="vertical-align: middle;">
               Unofficial pre-opening at
-                <br>🍺<a href="https://stanislausbrewskovitch.nl/">Stanislaus Brewskovitch</a> and
-                <br>🍻<a href="https://twentschefoodhal.nl/">Twentsche Foodhal</a>🍔
+              <br>🍺<a href="https://stanislausbrewskovitch.nl/">Stanislaus Brewskovitch</a> and
+              <br>🍻<a href="https://twentschefoodhal.nl/">Twentsche Foodhal</a>🍔
             </td>
           </tr>
           <tr class="sep">
@@ -124,7 +126,7 @@
               <strong>🔥 Keynote:</strong>
               <span class="talk"><em>From the Trenches</em></span>
               <br>
-              <span class="presenter with-emoji">Darius Blasband</span>
+              <span class="author presenter with-emoji">Darius Blasband</span>
             </td>
           </tr>
           <tr>
@@ -144,8 +146,8 @@
                   <td>
                     <span class="talk"><a href="pre/paper01.pdf">An Introduction to Indirect Code Completion</a></span>
                     <br>
-                    <u class="presenter">Nhat</u> and
-                    <span class="presenter">Vadim Zaytsev</span>
+                    <span class="author presenter">Nhat</span> and
+                    <span class="author">Vadim Zaytsev</span>
                   </td>
                 </tr>
                 <tr>
@@ -154,7 +156,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper02.pdf">Same Size, Different Costs: Phase-Level Energy Variations in Transformer Models during Code Generation</a></span>
                     <br>
-                    <u class="presenter">Lola Solovyeva</u>
+                    <span class="author presenter">Lola Solovyeva</span>
                   </td>
                 </tr>
                 <tr>
@@ -163,10 +165,10 @@
                   <td>
                     <span class="talk"><a href="pre/paper03.pdf">The Cost of <abbr title="Artificial Intelligence">AI</abbr>-Assisted Coding: Energy vs. Accuracy in Language Models</a></span>
                     <br>
-                    <u class="presenter">Negar Alizadeh</u>,
-                    <span class="presenter">Boris Belchev</span>,
-                    <span class="presenter">Nishant Saurabh</span>, and
-                    <span class="presenter">Patricia Kelbert</span>
+                    <span class="author presenter">Negar Alizadeh</span>,
+                    <span class="author">Boris Belchev</span>,
+                    <span class="author">Nishant Saurabh</span>, and
+                    <span class="author">Patricia Kelbert</span>
                   </td>
                 </tr>
               </table>
@@ -189,9 +191,9 @@
                   <td>
                     <span class="talk"><a href="pre/paper04.pdf">Bridging <abbr title="Central Processing Unit">CPU</abbr> and <abbr title="Graphics Processing Unit">GPU</abbr> in Rust</a></span>
                     <br>
-                    <u class="presenter">Niek Aukes</u>,
-                    <span class="presenter">Cristian-Andrei Begu</span>, and
-                    <span class="presenter">Georgiana Caltais</span>
+                    <span class="author presenter">Niek Aukes</span>,
+                    <span class="author">Cristian-Andrei Begu</span>, and
+                    <span class="author">Georgiana Caltais</span>
                   </td>
                 </tr>
                 <tr>
@@ -200,9 +202,9 @@
                   <td>
                     <span class="talk"><a href="pre/paper05.pdf">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a> (cf. <a href="https://doi.org/10.1016/j.scico.2025.103393" class="ext">SCP</a>)</span>
                     <br>
-                    <u class="presenter">Yunior Pacheco</u>,
-                    <span class="presenter">Coen De Roover</span>, and
-                    <span class="presenter">Johannes Härtel</span>
+                    <span class="author presenter">Yunior Pacheco</span>,
+                    <span class="author">Coen De Roover</span>, and
+                    <span class="author">Johannes Härtel</span>
                   </td>
                 </tr>
                 <tr>
@@ -211,9 +213,9 @@
                   <td>
                     <span class="talk"><a href="pre/paper06.pdf">An Analysis of Code Clones in GitHub Actions Workflows</a></span>
                     <br>
-                    <u class="presenter">Guillaume Cardoen</u>,
-                    <span class="presenter">Alexandre Decan</span>, and
-                    <span class="presenter">Tom Mens</span>
+                    <span class="author presenter">Guillaume Cardoen</span>,
+                    <span class="author">Alexandre Decan</span>, and
+                    <span class="author">Tom Mens</span>
                   </td>
                 </tr>
                 <tr>
@@ -226,11 +228,11 @@
                       (<a href="slides/deck07.pdf" class="ext">🖥️slides</a>)
                     </span>
                     <br>
-                    <span class="presenter">Ruksit Rojpaisarnkit</span>,
-                    <u class="presenter">Gregorio Robles</u>,
-                    <span class="presenter">Jesús M. González-Barahona</span>,
-                    <span class="presenter">Kenichi Matsumoto</span>, and
-                    <span class="presenter">Raula Gaikovina Kula</span>
+                    <span class="author">Ruksit Rojpaisarnkit</span>,
+                    <span class="author presenter">Gregorio Robles</span>,
+                    <span class="author">Jesús M. González-Barahona</span>,
+                    <span class="author">Kenichi Matsumoto</span>, and
+                    <span class="author">Raula Gaikovina Kula</span>
                   </td>
                 </tr>
                 <tr>
@@ -239,8 +241,8 @@
                   <td>
                     <span class="talk"><a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and <abbr title="Large Language Model">LLM</abbr> Translation</a> (cf. <a href="https://doi.org/10.18653/v1/2024.findings-acl.939" class="ext">ACL’24</a> &amp; <a href="https://github.com/krinara86/Bridge-Benevol" class="ext">GitHub</a>)</span>
                     <br>
-                    <u class="presenter">Krishna Narasimhan</u> and
-                    <span class="presenter">Mairieli Wessel</span>
+                    <span class="author presenter">Krishna Narasimhan</span> and
+                    <span class="author">Mairieli Wessel</span>
                   </td>
                 </tr>
                 <tr>
@@ -249,10 +251,10 @@
                   <td>
                     <span class="talk"><a href="pre/paper09.pdf">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</a> (cf. <a href="https://doi.org/10.1145/3643991.3644867" class="ext">MSR’24</a>)</span>
                     <br>
-                    <u class="presenter">Hassan Onsori Delicheh</u>,
-                    <span class="presenter">Guillaume Cardoen</span>,
-                    <span class="presenter">Alexandre Decan</span>, and
-                    <span class="presenter">Tom Mens</span>
+                    <span class="author presenter">Hassan Onsori Delicheh</span>,
+                    <span class="author">Guillaume Cardoen</span>,
+                    <span class="author">Alexandre Decan</span>, and
+                    <span class="author">Tom Mens</span>
                   </td>
                 </tr>
               </table>
@@ -278,11 +280,11 @@
                       (<a href="slides/deck10.pdf" class="ext">🖥️slides</a>)
                     </span>
                     <br>
-                    <span class="presenter">Wouter ten Brinke</span>,
-                    <span class="presenter">Bart Griepsma</span>,
-                    <span class="presenter">Aleksandra Ignatovič</span>,
-                    <span class="presenter">Nhat</span>, and
-                    <u class="presenter">Vadim Zaytsev</u>
+                    <span class="author">Wouter ten Brinke</span>,
+                    <span class="author">Bart Griepsma</span>,
+                    <span class="author">Aleksandra Ignatovič</span>,
+                    <span class="author">Nhat</span>, and
+                    <span class="author presenter">Vadim Zaytsev</span>
                   </td>
                 </tr>
                 <tr>
@@ -291,7 +293,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper11.pdf">ClassViz: From Verification Tool to Research Vessel</a> (<a href="https://doi.org/10.1109/MSR59073.2023.00029" class="ext">MSR’23</a> &amp; <a href="https://github.com/rsatrioadi/classviz" class="ext">GitHub</a>)</span>
                     <br>
-                    <u class="presenter">Satrio Adi Rukmono</u>
+                    <span class="author presenter">Satrio Adi Rukmono</span>
                   </td>
                 </tr>
                 <tr>
@@ -300,9 +302,9 @@
                   <td>
                     <span class="talk"><a href="pre/paper12.pdf">Pseudonymization as a Service: Compartmentalizing and Controlling Data Processing in Evolving Systems with Micropseudonymization</a></span>
                     <br>
-                    <u class="presenter">Job Doesburg</u>,
-                    <span class="presenter">Bernard van Gastel</span>, and
-                    <span class="presenter">Erik Poll</span>
+                    <span class="author presenter">Job Doesburg</span>,
+                    <span class="author">Bernard van Gastel</span>, and
+                    <span class="author">Erik Poll</span>
                   </td>
                 </tr>
               </table>
@@ -343,7 +345,7 @@
               <strong>🔥 Keynote:</strong>
               <span class="talk"><a href="pre/paper15.pdf">Language-Level Support for Multiple Versions for Software Evolution</a></span>
               <br>
-              <span class="presenter">Hidehiko Masuhara</span>
+              <span class="author presenter">Hidehiko Masuhara</span>
             </td>
           </tr>
           <tr>
@@ -363,11 +365,11 @@
                   <td>
                     <span class="talk"><a href="pre/paper13.pdf">On the Evolution of Direct Dependencies in <code>npm</code> Packages</a></span>
                     <br>
-                    <u class="presenter">Shahin Ebrahimi-Kia</u>,
-                    <span class="presenter">Jesús M. González-Barahona</span>,
-                    <span class="presenter">David Moreno-Lumbreras</span>,
-                    <span class="presenter">Gregorio Robles</span>, and
-                    <span class="presenter">Tom Mens</span>
+                    <span class="author presenter">Shahin Ebrahimi-Kia</span>,
+                    <span class="author">Jesús M. González-Barahona</span>,
+                    <span class="author">David Moreno-Lumbreras</span>,
+                    <span class="author">Gregorio Robles</span>, and
+                    <span class="author">Tom Mens</span>
                   </td>
                 </tr>
                 <tr>
@@ -376,9 +378,9 @@
                   <td>
                     <span class="talk"><a href="pre/paper14.pdf">An Empirical Analysis of the GitHub Actions Language Usage and Evolution</a></span>
                     <br>
-                    <u class="presenter">Aref Talebzadeh Bardsiri</u>,
-                    <span class="presenter">Alexandre Decan</span>, and
-                    <span class="presenter">Tom Mens</span>
+                    <span class="author presenter">Aref Talebzadeh Bardsiri</span>,
+                    <span class="author">Alexandre Decan</span>, and
+                    <span class="author">Tom Mens</span>
                   </td>
                 </tr>
                 <!--
@@ -402,7 +404,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper16.pdf">On the Transferability of a Bot Detection Model from GitHub to GitLab</a></span>
                     <br>
-                    <u class="presenter">Cyril Moreau</u>
+                    <span class="author presenter">Cyril Moreau</span>
                   </td>
                 </tr>
                 <tr>
@@ -411,8 +413,8 @@
                   <td>
                     <span class="talk"><a href="pre/paper17.pdf">Evolution-Resilient Class Contours</a></span>
                     <br>
-                    <u class="presenter">Mattia Giannaccari</u> and
-                    <span class="presenter">Marco Raglianti</span>
+                    <span class="author presenter">Mattia Giannaccari</span> and
+                    <span class="author">Marco Raglianti</span>
                   </td>
                 </tr>
               </table>
@@ -443,7 +445,8 @@
                   <td>
                     <span class="talk"><a href="pre/paper18.pdf">Preliminary Survey on <abbr title="Cyber-Physical System">CPS</abbr> Testing in Various Domains of the Industry</a></span>
                     <br>
-                    <span class="presenter">Guillaume Nguyen</span> and <span class="presenter">Xavier Devroey</span>
+                    <span class="author">Guillaume Nguyen</span> and
+                    <span class="author">Xavier Devroey</span>
                   </td>
                 </tr>
                 <tr>
@@ -452,10 +455,10 @@
                   <td>
                     <span class="talk"><a href="pre/paper19.pdf">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</a></span>
                     <br>
-                    <span class="presenter">Mert Ege Can</span>,
-                    <span class="presenter">Joanna Kisaakye</span>,
-                    <span class="presenter">Mutlu Beyazıt</span>, and
-                    <span class="presenter">Serge Demeyer</span>
+                    <span class="author">Mert Ege Can</span>,
+                    <span class="author">Joanna Kisaakye</span>,
+                    <span class="author">Mutlu Beyazıt</span>, and
+                    <span class="author">Serge Demeyer</span>
                   </td>
                 </tr>
                 <tr>
@@ -464,8 +467,8 @@
                   <td>
                     <span class="talk"><a href="pre/paper20.pdf">Evaluating Test-Driven Code Generation: A Replication Study</a></span>
                     <br>
-                    <span class="presenter">Giovanni Rosa</span> and
-                    <span class="presenter">Jesús Maria González-Barahona</span>
+                    <span class="author">Giovanni Rosa</span> and
+                    <span class="author">Jesús Maria González-Barahona</span>
                   </td>
                 </tr>
               </table>
@@ -488,7 +491,7 @@
                   <td>
                     <span class="talk"><a href="https://github.com/pooya-rostami/gawd" class="ext">gawd</a></span>
                     by
-                    <span class="presenter">Pooya Rostami Mazrae</span>
+                    <span class="author">Pooya Rostami Mazrae</span>
                   </td>
                 </tr>
                 <tr>
@@ -497,7 +500,7 @@
                   <td>
                     <span class="talk"><a href="https://github.com/uhourri/ghmap" class="ext">ghmap</a></span>
                     by
-                    <span class="presenter">Youness Hourri</span>
+                    <span class="author">Youness Hourri</span>
                   </td>
                 </tr>
                 <tr>
@@ -506,7 +509,7 @@
                   <td>
                     <span class="talk"><a href="https://github.com/omersayilir75/CPSDSL" class="ext">CPSLint</a></span>
                     by
-                    <span class="presenter">Ömer Sayilir</span>
+                    <span class="author">Ömer Sayilir</span>
                   </td>
                 </tr>
                 <tr>
@@ -515,7 +518,7 @@
                   <td>
                     <span class="talk"><a href="https://github.com/NiekAukes/rust-gpu-hybrid-compiler" class="ext">rust-gpu-hybrid-compiler</a></span>
                     by
-                    <span class="presenter">Niek Aukes</span>
+                    <span class="author">Niek Aukes</span>
                   </td>
                 </tr>
               </table>
