--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
                   <td>
                     <span class="talk"><a href="pre/paper20.pdf">Evaluating Test-Driven Code Generation: A Replication Study</a></span>
                     <br>
-                    <span class="presenter">Giovanni Rosa</span> and
-                    <span class="presenter">Jesús Maria González-Barahona</span>
+                    <span class="author presenter">Giovanni Rosa</span> and
+                    <span class="author">Jesús Maria González-Barahona</span>
                     <span class="author">Guillaume Nguyen</span> and
                     <span class="author">Xavier Devroey</span>
                   </td>
