feat: Mark presenter for 1 talk

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                     <span class="talk"><a href="pre/paper19.pdf">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</a></span>
                     <br>
                     <span class="author">Mert Ege Can</span>,
-                    <span class="author">Joanna Kisaakye</span>,
+                    <span class="author presenter">Joanna Kisaakye</span>,
                     <span class="author">Mutlu Beyazıt</span>, and
                     <span class="author">Serge Demeyer</span>
                   </td>
