--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           <tr>
             <th colspan="2">
               <div class="big-day">18</div>
-              <a name="program-day2" id="program-day2"></a>
+              <a id="program-day2"></a>
               <div>Tuesday</div>
               <div>November 2025</div>
             </th>
@@ -450,8 +450,6 @@
                     <br>
                     <span class="author presenter">Giovanni Rosa</span> and
                     <span class="author">Jesús Maria González-Barahona</span>
-                    <span class="author">Guillaume Nguyen</span> and
-                    <span class="author">Xavier Devroey</span>
                   </td>
                 </tr>
                 <tr>
@@ -472,9 +470,8 @@
                   <td>
                     <span class="talk"><a href="pre/paper18.pdf">Preliminary Survey on <abbr title="Cyber-Physical System">CPS</abbr> Testing in Various Domains of the Industry</a></span>
                     <br>
-                    <span class="presenter">Guillaume Nguyen</span> and <span class="presenter">Xavier Devroey</span>
-                    <span class="author">Giovanni Rosa</span> and
-                    <span class="author">Jesús Maria González-Barahona</span>
+                    <span class="presenter">Guillaume Nguyen</span> and
+                    <span class="presenter">Xavier Devroey</span>
                   </td>
                 </tr>
               </table>
