--- a/index.html
+++ b/index.html
@@ -319,10 +319,10 @@
               <strong>Group photos</strong>
               <div class="images-col" style="padding-top: 1em;">
                 <a href="img/group-photo-ls.jpg" target="_blank" class="img-link">
-                    <img src="img/group-photo-thumb-ls.jpg">
+                    <img src="img/group-photo-thumb-ls.jpg" alt="Group photo of almost all BENEVOL participants, photo courtesy of Lola Solovyeva" title="photo courtesy of Lola Solovyeva">
                 </a>
                 <a href="img/group-photo-vz.jpg" target="_blank" class="img-link">
-                    <img src="img/group-photo-thumb-vz.jpg">
+                    <img src="img/group-photo-thumb-vz.jpg" alt="Group photo of almost all BENEVOL participants, photo courtesy of Vadim Zaytsev" title="photo courtesy of Vadim Zaytsev">
                 </a>
               </div>
             </td>
@@ -429,7 +429,14 @@
           </tr>
           <tr>
             <td><strong class="red">13:00 – 14:30</strong></td>
-            <td>💾 <strong>Social event</strong>: a visit to the <a href="https://studieverzameling.utwente.nl/"><strong>Historic Study Collection</strong></a> (<a href="https://www.utwente.nl/download/campusmap.pdf">Carré</a> building)</td>
+            <td>
+              💾 <strong>Social event</strong>: a visit to the <a href="https://studieverzameling.utwente.nl/"><strong>Historic Study Collection</strong></a> (<a href="https://www.utwente.nl/download/campusmap.pdf">Carré</a> building)
+              <div class="images-col" style="padding-top: 1em;">
+                <a href="img/siemens-hell-schrijver.jpg" target="_blank" class="img-link">
+                    <img src="img/siemens-hell-schrijver-thumb.jpg" alt="Siemens Hell Schrijver from 1960, photo courtesy of Nhat Bui" title="photo courtesy of Nhat Bui">
+                </a>
+              </div>
+            </td>
           </tr>
           <tr>
             <td>14:30 – 15:00</td>
