--- a/index.html
+++ b/index.html
@@ -477,8 +477,8 @@
                   <td>
                     <span class="talk"><a href="pre/paper18.pdf">Preliminary Survey on <abbr title="Cyber-Physical System">CPS</abbr> Testing in Various Domains of the Industry</a></span>
                     <br>
-                    <span class="presenter">Guillaume Nguyen</span> and
-                    <span class="presenter">Xavier Devroey</span>
+                    <span class="author">Guillaume Nguyen</span> and
+                    <span class="author presenter">Xavier Devroey</span>
                   </td>
                 </tr>
               </table>
