add slides for talk 12 and authors in the tool market

--- a/index.html
+++ b/index.html
@@ -303,7 +303,10 @@
                   <td>16:10 – 16:30</td>
                   <td>🔬</td>
                   <td>
-                    <span class="talk"><a href="pre/paper12.pdf">Pseudonymization as a Service: Compartmentalizing and Controlling Data Processing in Evolving Systems with Micropseudonymization</a></span>
+                    <span class="talk">
+                      <a href="pre/paper12.pdf">Pseudonymization as a Service: Compartmentalizing and Controlling Data Processing in Evolving Systems with Micropseudonymization</a>
+                      (<a href="slides/deck12.pdf" class="ext">🖥️slides</a>)
+                    </span>
                     <br>
                     <span class="author presenter">Job Doesburg</span>,
                     <span class="author">Bernard van Gastel</span>, and
@@ -501,7 +504,9 @@
                   <td>
                     <span class="talk"><a href="https://github.com/pooya-rostami/gawd" class="ext">gawd</a></span>
                     by
-                    <span class="author">Pooya Rostami Mazrae</span>
+                    <span class="author presenter">Pooya Rostami Mazrae</span>,
+                    <span class="author">Alexandre Decan</span>, and
+                    <span class="author">Tom Mens</span>
                   </td>
                 </tr>
                 <tr>
