no ands, more Decan-Mens tools

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper01.pdf">An Introduction to Indirect Code Completion</a></span>
                     <br>
-                    <span class="author presenter">Nhat</span> and
+                    <span class="author presenter">Nhat</span>,
                     <span class="author">Vadim Zaytsev</span>
                   </td>
                 </tr>
@@ -167,7 +167,7 @@
                     <br>
                     <span class="author presenter">Negar Alizadeh</span>,
                     <span class="author">Boris Belchev</span>,
-                    <span class="author">Nishant Saurabh</span>, and
+                    <span class="author">Nishant Saurabh</span>,
                     <span class="author">Patricia Kelbert</span>
                   </td>
                 </tr>
@@ -195,7 +195,7 @@
                     </span>
                     <br>
                     <span class="author presenter">Niek Aukes</span>,
-                    <span class="author">Cristian-Andrei Begu</span>, and
+                    <span class="author">Cristian-Andrei Begu</span>,
                     <span class="author">Georgiana Caltais</span>
                   </td>
                 </tr>
@@ -206,7 +206,7 @@
                     <span class="talk"><a href="pre/paper05.pdf">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a> (cf. <a href="https://doi.org/10.1016/j.scico.2025.103393" class="ext">SCP</a>)</span>
                     <br>
                     <span class="author presenter">Yunior Pacheco</span>,
-                    <span class="author">Coen De Roover</span>, and
+                    <span class="author">Coen De Roover</span>,
                     <span class="author">Johannes Härtel</span>
                   </td>
                 </tr>
@@ -217,7 +217,7 @@
                     <span class="talk"><a href="pre/paper06.pdf">An Analysis of Code Clones in GitHub Actions Workflows</a></span>
                     <br>
                     <span class="author presenter">Guillaume Cardoen</span>,
-                    <span class="author">Alexandre Decan</span>, and
+                    <span class="author">Alexandre Decan</span>,
                     <span class="author">Tom Mens</span>
                   </td>
                 </tr>
@@ -234,7 +234,7 @@
                     <span class="author">Ruksit Rojpaisarnkit</span>,
                     <span class="author presenter">Gregorio Robles</span>,
                     <span class="author">Jesús M. González-Barahona</span>,
-                    <span class="author">Kenichi Matsumoto</span>, and
+                    <span class="author">Kenichi Matsumoto</span>,
                     <span class="author">Raula Gaikovina Kula</span>
                   </td>
                 </tr>
@@ -244,7 +244,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and <abbr title="Large Language Model">LLM</abbr> Translation</a> (cf. <a href="https://doi.org/10.18653/v1/2024.findings-acl.939" class="ext">ACL’24</a> &amp; <a href="https://github.com/krinara86/Bridge-Benevol" class="ext">GitHub</a>)</span>
                     <br>
-                    <span class="author presenter">Krishna Narasimhan</span> and
+                    <span class="author presenter">Krishna Narasimhan</span>,
                     <span class="author">Mairieli Wessel</span>
                   </td>
                 </tr>
@@ -256,7 +256,7 @@
                     <br>
                     <span class="author presenter">Hassan Onsori Delicheh</span>,
                     <span class="author">Guillaume Cardoen</span>,
-                    <span class="author">Alexandre Decan</span>, and
+                    <span class="author">Alexandre Decan</span>,
                     <span class="author">Tom Mens</span>
                   </td>
                 </tr>
@@ -286,7 +286,7 @@
                     <span class="author">Wouter ten Brinke</span>,
                     <span class="author">Bart Griepsma</span>,
                     <span class="author">Aleksandra Ignatovič</span>,
-                    <span class="author">Nhat</span>, and
+                    <span class="author">Nhat</span>,
                     <span class="author presenter">Vadim Zaytsev</span>
                   </td>
                 </tr>
@@ -309,7 +309,7 @@
                     </span>
                     <br>
                     <span class="author presenter">Job Doesburg</span>,
-                    <span class="author">Bernard van Gastel</span>, and
+                    <span class="author">Bernard van Gastel</span>,
                     <span class="author">Erik Poll</span>
                   </td>
                 </tr>
@@ -374,7 +374,7 @@
                     <span class="author presenter">Shahin Ebrahimi-Kia</span>,
                     <span class="author">Jesús M. González-Barahona</span>,
                     <span class="author">David Moreno-Lumbreras</span>,
-                    <span class="author">Gregorio Robles</span>, and
+                    <span class="author">Gregorio Robles</span>,
                     <span class="author">Tom Mens</span>
                   </td>
                 </tr>
@@ -385,7 +385,7 @@
                     <span class="talk"><a href="pre/paper14.pdf">An Empirical Analysis of the GitHub Actions Language Usage and Evolution</a></span>
                     <br>
                     <span class="author presenter">Aref Talebzadeh Bardsiri</span>,
-                    <span class="author">Alexandre Decan</span>, and
+                    <span class="author">Alexandre Decan</span>,
                     <span class="author">Tom Mens</span>
                   </td>
                 </tr>
@@ -399,7 +399,7 @@
                     <span class="presenter">Tomoyuki Aotani</span>,
                     <span class="presenter">Satsuki Kasuya</span>,
                     <span class="presenter">Luthfan Lubis</span>,
-                    <span class="presenter">Hidehiko Masuhara</span>, and
+                    <span class="presenter">Hidehiko Masuhara</span>,
                     <span class="presenter">Yudai Tanabe</span>
                   </td>
                 </tr>
@@ -419,7 +419,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper17.pdf">Evolution-Resilient Class Contours</a></span>
                     <br>
-                    <span class="author presenter">Mattia Giannaccari</span> and
+                    <span class="author presenter">Mattia Giannaccari</span>,
                     <span class="author">Marco Raglianti</span>
                   </td>
                 </tr>
@@ -458,7 +458,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper20.pdf">Evaluating Test-Driven Code Generation: A Replication Study</a></span>
                     <br>
-                    <span class="author presenter">Giovanni Rosa</span> and
+                    <span class="author presenter">Giovanni Rosa</span>,
                     <span class="author">Jesús Maria González-Barahona</span>
                   </td>
                 </tr>
@@ -470,7 +470,7 @@
                     <br>
                     <span class="author">Mert Ege Can</span>,
                     <span class="author presenter">Joanna Kisaakye</span>,
-                    <span class="author">Mutlu Beyazıt</span>, and
+                    <span class="author">Mutlu Beyazıt</span>,
                     <span class="author">Serge Demeyer</span>
                   </td>
                 </tr>
@@ -480,7 +480,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper18.pdf">Preliminary Survey on <abbr title="Cyber-Physical System">CPS</abbr> Testing in Various Domains of the Industry</a></span>
                     <br>
-                    <span class="author">Guillaume Nguyen</span> and
+                    <span class="author">Guillaume Nguyen</span>,
                     <span class="author presenter">Xavier Devroey</span>
                   </td>
                 </tr>
@@ -499,41 +499,45 @@
             <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>TBD</td>
+                  <td>16:10 – 16:20</td>
                   <td>🔧</td>
                   <td>
                     <span class="talk"><a href="https://github.com/pooya-rostami/gawd" class="ext">gawd</a></span>
                     by
                     <span class="author presenter">Pooya Rostami Mazrae</span>,
-                    <span class="author">Alexandre Decan</span>, and
+                    <span class="author">Alexandre Decan</span>,
                     <span class="author">Tom Mens</span>
                   </td>
                 </tr>
                 <tr>
-                  <td>TBD</td>
+                  <td>16:20 – 16:30</td>
                   <td>🔧</td>
                   <td>
                     <span class="talk"><a href="https://github.com/uhourri/ghmap" class="ext">ghmap</a></span>
                     by
-                    <span class="author">Youness Hourri</span>
+                    <span class="author presenter">Youness Hourri</span>
+                    <span class="author">Alexandre Decan</span>,
+                    <span class="author">Tom Mens</span>
                   </td>
                 </tr>
                 <tr>
-                  <td>TBD</td>
+                  <td>16:30 – 16:40</td>
                   <td>🔧</td>
                   <td>
                     <span class="talk"><a href="https://github.com/omersayilir75/CPSDSL" class="ext">CPSLint</a></span>
                     by
-                    <span class="author">Ömer Sayilir</span>
+                    <span class="author presenter">Ömer Sayilir</span>,
+                    <span class="author">Vadim Zaytsev</span>
                   </td>
                 </tr>
                 <tr>
-                  <td>TBD</td>
+                  <td>16:40 – 16:50</td>
                   <td>🔧</td>
                   <td>
                     <span class="talk"><a href="https://github.com/NiekAukes/rust-gpu-hybrid-compiler" class="ext">rust-gpu-hybrid-compiler</a></span>
                     by
-                    <span class="author">Niek Aukes</span>
+                    <span class="author">Niek Aukes</span>,
+                    <span class="author presenter">Andrei Begu</span>
                   </td>
                 </tr>
               </table>
