add slides for talk 3 plus link RESTCov

--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
                   <td>12:20 – 12:30</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper03.pdf">The Cost of <abbr title="Artificial Intelligence">AI</abbr>-Assisted Coding: Energy vs. Accuracy in Language Models</a></span>
+                    <span class="talk">
+                      <a href="pre/paper03.pdf">The Cost of <abbr title="Artificial Intelligence">AI</abbr>-Assisted Coding: Energy vs. Accuracy in Language Models</a>
+                      (<a href="slides/deck03.pdf" class="ext">🖥️slides</a>)
+                    </span>
                     <br>
                     <span class="author presenter">Negar Alizadeh</span>,
                     <span class="author">Boris Belchev</span>,
@@ -538,6 +541,15 @@
                     by
                     <span class="author">Niek Aukes</span>,
                     <span class="author presenter">Andrei Begu</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>16:50 – 17:00</td>
+                  <td>🔧</td>
+                  <td>
+                    <span class="talk"><a href="https://github.com/2tolgahan2/RESTCov" class="ext">RESTCov</a></span>
+                    by
+                    <span class="author presenter">Tolga</span><span class="author">han Bardakci</span>
                   </td>
                 </tr>
               </table>
