feat: Update date highlights

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
             <td>Lunch</td>
           </tr>
           <tr>
-            <td><strong class="red">13:00 – 14:30</strong></td>
+            <td>13:00 – 14:30</td>
             <td>
               💾 <strong>Social event</strong>: a visit to the <a href="https://studieverzameling.utwente.nl/"><strong>Historic Study Collection</strong></a> (<a href="https://www.utwente.nl/download/campusmap.pdf">Carré</a> building)
               <div class="images-col" style="padding-top: 1em;">
@@ -549,7 +549,7 @@
                   <td>
                     <span class="talk"><a href="https://github.com/2tolgahan2/RESTCov" class="ext">RESTCov</a></span>
                     by
-                    <span class="author presenter">Tolga</span><span class="author">han Bardakci</span>
+                    <span class="author presenter"><span style="text-decoration: double underline;">Tolga</span>han Bardakci</span>
                   </td>
                 </tr>
               </table>
@@ -916,9 +916,9 @@
           <li><b>Submission Deadline:</b> Fri 3 October 2025</li>
           <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
           <li><b>Author Registration Deadline:</b> Mon 10 November 2025</li>
-          <li><a href="pre"><strong class="grn">Pre</strong>-<strong class="blk">proceedings</strong></a> Camera-Ready Deadline:</b> Fri 7 November 2025 (📒<a href="pre">online</a>)</li>
-          <li><b>Workshop Date:</b> Mon–Tue <strong class="red">17–18 November 2025</strong></li>
-          <li><b><strong class="grn">Post</strong>-proceedings Camera-Ready Deadline:</b> Fri 19 December 2025</li>
+          <li><b><a href="pre"><strong class="grn">Pre</strong>-<strong class="blk">proceedings</strong></a> Camera-Ready Deadline:</b> Fri 7 November 2025 (📒<a href="pre">online</a>)</li>
+          <li><b>Workshop Date:</b> Mon–Tue 17–18 November 2025</li>
+          <li><b><strong class="grn">Post</strong>-proceedings Camera-Ready Deadline:</b> Fri <strong class="red">19 December 2025</strong></li>
         </ul>
       </div>
     </div>
