some fixes and a possible future

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                   <td>
                     <span class="talk"><a href="https://github.com/2tolgahan2/RESTCov" class="ext">RESTCov</a></span>
                     by
-                    <span class="author presenter"><span style="text-decoration: double underline;">Tolga</span>han Bardakci</span>
+                    <span class="author presenter">Tolga</span><span class="author">han Bardakci</span>
                   </td>
                 </tr>
               </table>
@@ -557,7 +557,14 @@
           </tr>
           <tr>
             <td>17:00 +</td>
-            <td>Closing and afterparty</td>
+            <td>
+              Closing and afterparty
+              <div class="images-col" style="padding-top: 1em;">
+                <a href="img/benevol26.png" class="img-link">
+                    <img src="img/benevol26.png" alt="BENEVOL 2026" title="logo proposal drawn by Vadim Zaytsev">
+                </a>
+              </div>
+            </td>
           </tr>
           </tbody>
         </table>
@@ -763,7 +770,7 @@
           the location is the <strong>C2 room</strong> of the <a href="https://www.uparkhotel.nl/en">U Park Hotel</a>
           on the campus of the said university.
           The pre-opening on Day 0 (16 November) takes place in the city centre of Enschede.
-          The social even on Day 2 (18 November) takes place in the Carré building on the campus.
+          The social event on Day 2 (18 November) takes place in the Carré building on the campus.
         </p>
 
         <iframe
@@ -913,12 +920,12 @@
           All dates are in the Anywhere on Earth (AoE, 23:59) calendar designation.
         </p>
         <ul>
-          <li><b>Submission Deadline:</b> Fri 3 October 2025</li>
-          <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
-          <li><b>Author Registration Deadline:</b> Mon 10 November 2025</li>
-          <li><b><a href="pre"><strong class="grn">Pre</strong>-<strong class="blk">proceedings</strong></a> Camera-Ready Deadline:</b> Fri 7 November 2025 (📒<a href="pre">online</a>)</li>
-          <li><b>Workshop Date:</b> Mon–Tue 17–18 November 2025</li>
-          <li><b><strong class="grn">Post</strong>-proceedings Camera-Ready Deadline:</b> Fri <strong class="red">19 December 2025</strong></li>
+          <li><strong>Submission Deadline:</strong> Fri 3 October 2025</li>
+          <li><strong>Author Notification Deadline:</strong> Fri 24 October 2025</li>
+          <li><strong>Author Registration Deadline:</strong> Mon 10 November 2025</li>
+          <li><a href="pre"><strong class="grn">Pre</strong>-<strong class="blk">proceedings</strong></a> Camera-Ready Deadline:</b> Fri 7 November 2025 (📒<a href="pre">online</a>)</li>
+          <li><strong>Workshop Date:</strong> Mon–Tue 17–18 November 2025</li>
+          <li><strong><span class="grn">Post</span>-proceedings Camera-Ready Deadline:</strong> Fri <strong class="red">19 December 2025</strong></li>
         </ul>
       </div>
     </div>
