add slides for talk 11

--- a/index.html
+++ b/index.html
@@ -297,7 +297,11 @@
                   <td>15:50 – 16:10</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper11.pdf">ClassViz: From Verification Tool to Research Vessel</a> (<a href="https://doi.org/10.1109/MSR59073.2023.00029" class="ext">MSR’23</a> &amp; <a href="https://github.com/rsatrioadi/classviz" class="ext">GitHub</a>)</span>
+                    <span class="talk">
+                      <a href="pre/paper11.pdf">ClassViz: From Verification Tool to Research Vessel</a>
+                      (<a href="https://doi.org/10.1109/MSR59073.2023.00029" class="ext">MSR’23</a> &amp; <a href="https://github.com/rsatrioadi/classviz" class="ext">GitHub</a>)
+                      (<a href="slides/deck11.pdf" class="ext">🖥️slides</a>)
+                    </span>
                     <br>
                     <span class="author presenter">Satrio Adi Rukmono</span>
                   </td>
